Fixed momentum scrolling on ios when adding an activity

--- a/BoredPass/public/css/add_activity.less
+++ b/BoredPass/public/css/add_activity.less
@@ -95,6 +95,8 @@ span.strong {
     overflow: auto;
     background-color: @col-body-bg;
     padding: 20px 60px;
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
 }
 
 .add-activity .step.shift.right1 {
